# aprsd-stock-plugin

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
aprsd_stock_plugin/: __init__.py  aprsd_stock_plugin.py  cli.py  stock.py
aprsd_stock_plugin/conf/: __init__.py  main.py  opts.py
