[metadata]
name = aprsd_stock_plugin
long_description = file: README.md
long_description_content_type = text/markdown
author = Walter A. Boring IV
author_email = waboring@hemna.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
classifier =
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file =
    README.md
summary = Ham Radio APRSD Plugin for fetching stock quotes

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    aprsd_stock_plugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[mypy]
ignore_missing_imports = True
strict = True
